# SNF-Calibration

./: ATT-10-PER-COL.mat  CMP-2-GRADOS.psc  Colunmna.psc  MULTIaim+00.psc  PruebaRuido.psc  SNF-1GRADO.psc  SNF-30.psc  aim+00.psc  aim-10.psc  aim-20.psc  aim-30.psc  aim-40.psc  aim-50.psc  algo  broadside_uniform_cal_1_iter.mat  broadside_uniform_cal_1_iter_20log.mat  broadside_uniform_cal_2_iter_20log.mat  broadside_uniform_cal_4_iter_10log.mat  broadside_uniform_sin_calibrar.mat  corte.py  pyproject.toml  rev.py
Beamformers/: ControllerBoardInterface.py  SerialControllerBoardInterface.py
HertzDipole/: F3smn_rThetaPhi.m  HertzDipoleX.m  Pmn.m  Rsn_kr.m  ThetaDependence.m  dipoleXArray.m  legendre2.m  z3n_kr.m
InstrumentControllers/antennaRF/: N5264A.py  antennaRFController.py  antennaRFFactory.py  pna_E8362B.py
InstrumentControllers/motor/: orbit.py  orbit_eth.py
